--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,14 +29,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
-            
+            {% if currentUser.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-            <a class="nav-item nav-link" id="logout" href="/product">Product</a>
-            
+            {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
             <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-            
+            {% endif %}
           </div>
         </div>
       </nav>
