--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -15,9 +15,11 @@
   <tbody>
     {% for row in result %}
     <tr>
+        <td> {{ row[0] }} </td> 
         <td> {{ row[1] }} </td> 
         <td> {{ row[2] }} </td>
         <td> {{ row[3] }} </td>
+        <td> {{ row[4] }} </td> 
    </tr>
   {% endfor %}
   </tbody>
