added profile page/remove product page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -31,6 +31,7 @@
           <div class="navbar-nav">
             {% if currentUser.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
+            <a class="nav-item nav-link" id="home" href="/profile">My Profile</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
