--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,13 +3,15 @@
 
 {% block content %}
 <div align="center" class="container">
-<h1 align="center"> Product Page</h1>
+<h1 align="center"> Welcome to Market Mania</h1>
 <table>
   <thead>
     <tr>
-      <th>Product Name &nbsp;&nbsp;</th>
-      <th>Quantity&nbsp;&nbsp;</th>
+      <th>Product ID &nbsp;&nbsp;</th>
+      <th>Product Name&nbsp;&nbsp;</th>
+      <th>Quantity</th>
       <th>Price</th>
+      <th>Category ID</th>
     </tr>
   </thead>
   <tbody>
