--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div align="center" class="container">
-<h1 align="center"> Welcome to Market Mania</h1>
+<h1 align="center">{{currentUser.first_name}} Welcome to Market Mania</h1>
 <table>
   <thead>
     <tr>
