--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div align="center" class="container">
-    <h1 align="center">{{ currentUser.email }} Welcome to Market Mania</h1>
+    <h1 align="center"> Welcome to Market Mania</h1>
+    <h2 align="center">Customer Name: {{ current_user.first_name }}</h2>
     <table>
         <thead>
             <tr>
