--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,15 +29,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
-            
+            {% if current_user.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
             <a class="nav-item nav-link" id="profile" href="/profile">My Profile</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-           
+            {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
             <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-        
+            {% endif %}
           </div>
         </div>
       </nav>
