--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -39,10 +39,12 @@
             <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantity" required>
         </div>
         <div class="form-group">
-          <label>Total Price</label>
+          <label>Total Price:</label>
           <div>{{ total_price | default('') }}</div>
+          
       </div>
         <input class="btn btn-primary" type="submit" value="Submit">
     </form>
+    <br />
 </div>
 {% endblock %}
