--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -20,7 +20,7 @@
                         <h6 class="mb-0">Name</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                        <input type="text" class="form-control" value="{{ current_user.first_name }}">
+                        <input type="text" name = "name" class="form-control" value="{{ current_user.first_name }}">
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -31,6 +31,7 @@
                         <input type="text" class="form-control" value="{{ current_user.id }}">
                     </div>
                 </div>
+                
             </div>
             
     <br />
