--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -40,7 +40,7 @@
         </div>
         <div class="form-group">
           <label>Total Price:</label>
-          <div>{{ total_price | default('') }}</div>
+          <div>{{ total_price }}</div>
           
       </div>
         <input class="btn btn-primary" type="submit" value="Submit">
