--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -3,46 +3,40 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
-<form method="POST" action="{{ url_for('auth.profile') }}">
-    <h3 align="center">My Profile</h3>
-    <div class="col-lg-8">
-        <div class="card">
-            <div class="card-body">
-                <div class="row mb-3">
-                    <div class="col-sm-3">
-                        <h6 class="mb-0">Customer ID</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                        <input type="text" class="form-control" value="{{ current_user.customer_id }}" readonly>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-sm-3">
-                        <h6 class="mb-0">Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                        <input type="text" name="name" class="form-control" value="{{ current_user.first_name }}" required>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-sm-3">
-                        <h6 class="mb-0">New Password</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                        <input type="password" name="new_password1" class="form-control" minlength="7" required>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-sm-3">
-                        <h6 class="mb-0">Confirm Password</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                        <input type="password" name="new_password2" class="form-control" minlength="7" required>
-                    </div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="text-center mb-4">My Profile</h3>
+                    <form method="POST" action="{{ url_for('auth.profile') }}">
+                        <div class="mb-3">
+                            <label class="form-label">Customer ID</label>
+                            <input type="text" class="form-control" value="{{ current_user.customer_id }}" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email Address</label>
+                            <input type="text" class="form-control" value="{{ current_user.id }}" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Name</label>
+                            <input type="text" name="name" class="form-control" value="{{ current_user.first_name }}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">New Password</label>
+                            <input type="password" name="new_password1" class="form-control" minlength="7" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Confirm Password</label>
+                            <input type="password" name="new_password2" class="form-control" minlength="7" required>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-            
-    <br />
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-</form>
+        </div>
+    </div>
+</div>
 {% endblock %}
