--- a/website/templates/checkout.html
+++ b/website/templates/checkout.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="text-center">Checkout</h1>
-    <h2 class="text-center">Customer Name: {{ current_user_email }}</h2>
+    <h1 class="text-center font-weight-bold mt-5">Checkout</h1>
+    <h2 class="text-center" style="color: rgba(0, 4, 255, 0.945); font-size: 24px;">Customer Name: {{ current_user_email }}</h2>
     
     <h3>Products in Cart:</h3>
     <table class="table table-bordered table-striped">
-        <thead>
+        <thead class="thead-dark">
             <tr>
                 <th>Product Name</th>
                 <th>Quantity</th>
@@ -17,7 +17,7 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="text-center">
             {% for cart_item in cart_items %}
             <tr>
                 <td>{{ cart_item.product_name }}</td>
