--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -32,7 +32,9 @@
             {% if current_user.is_authenticated %}
             <a class="nav-item nav-link" id="home" href="/">Home</a>
             <a class="nav-item nav-link" id="profile" href="/profile">My Profile</a>
-            <a class="nav-item nav-link" id="checkout" href="/checkout">Cart</a>
+            <a class="nav-item nav-link" id="checkout" name = "checkout" href="/checkout">Cart</a>
+            <a class="nav-item nav-link" id="orders" name = "orders" href="/orders">Orders</a>
+            <a class="nav-item nav-link" id="reviews" name = "reviews" href="/reviews">Reviews</a>
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             {% else %}
             <a class="nav-item nav-link" id="login" href="/login">Login</a>
